--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #ebc908;
   --primary-text: #ffffff;
-  --secondary: #ff1dec;
+  --secondary: #360b34;
   --secondary-text: #ffffff;
-  --accent: #505050;
+  --accent: #360b34;
   --accent-text: #ffffff;
 }
